--- a/style.css
+++ b/style.css
@@ -77,8 +77,6 @@ img{
     
   }
 
-  
-
   .y2{
     margin: 40px ;
     font-size: 16px;
@@ -114,17 +112,17 @@ img{
 }
 
 .reviewss{
-    display: flex; /* Use flexbox to center the button */
-    justify-content: center; /* Center content horizontally */
-    align-items: center; /* Center content vertically (optional) */
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
     height: auto; 
     letter-spacing: 1.1px;
 }
 
 .ctn{
-    display: flex; /* Use flexbox to center the button */
-    justify-content: center; /* Center content horizontally */
-    align-items: center; /* Center content vertically (optional) */
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
     height: auto; 
     padding: 10px;
 }
@@ -142,39 +140,51 @@ img{
         padding: 80px 3%;
         transition: .2s;
     }
-    .contact-img img{
-        max-width: 100%;
-        display: flex;
-        position: relative;
-        flex: 3;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        position: absolute;
+    
 
-        }
-
-        .container{
-            display: flex;
-            position: inherit;
-        }
+    
 
         button{
             margin-bottom: 0px;
             width: 60vw;
             padding: 10px 5px;
+        
         }
     
     
         @media only screen and (max-width: 600px)  {
             .contact-img img{
-                flex-flow: column;
+                
                 height: auto;
-                max-width: 50%;
-                text-align: center;
-                position: inherit;
+                max-width: 80%;
+                position:static;
+
             }
+
+            .reviewss{
+                display: flex; 
+                justify-content: right;
+                align-items: right; 
+                position:absolute;
+                max-width: 80%;
+                height: auto;
+                top: auto;
+                
+            }
+
+            .ctn{
+                display: flex;
+                justify-content: center; 
+                align-items: center; 
+                height: auto; 
+                padding: 10px;
+            }
+            
+
         
         
+            
+                
+            }
     
 }
