--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: 'Fira Sans Extra Condensed', sans-serif;
     background-color: #333;
+    color: white;
 }
 
 section{
@@ -166,7 +167,6 @@ img{
                 justify-content: right;
                 align-items: right; 
                 position:absolute;
-                max-width: 80%;
                 height: auto;
                 top: auto;
                 
@@ -178,14 +178,7 @@ img{
                 padding: 10px 5px;
             
             }
-        
-
-            
-            
-
-        
-        
-            
+    
                 
             }
     
