--- a/style.css
+++ b/style.css
@@ -158,11 +158,16 @@ span{
 
         .reviews{
             margin: 40px;
+            color: purple;
         }
 
         .rate{
             margin-left: 40px;
             
+        }
+
+        a.hover .reviews{
+            color: aqua;
         }
     
     
