--- a/form.css
+++ b/form.css
@@ -139,3 +139,33 @@ a:hover span{
   span{
     color: #dc2f55;
   }
+
+  img {
+    right: 0;
+    position: absolute;
+    max-width: 450px;
+  }
+
+  @media only screen and (max-width: 800px)  {
+     img{
+        
+        height: 130vw;
+        max-width: 70%;
+        position:static;
+
+      
+          
+          
+          
+      }
+
+      .form{
+        max-width: 100%;
+        height: 100vh;
+      }
+
+    }
+
+    
+
+    
