--- a/form.css
+++ b/form.css
@@ -149,7 +149,7 @@ a:hover span{
   @media only screen and (max-width: 600px)  {
      img{
         
-        height: 100vh;
+        height: 150vw;
         max-width: 60%;
         position:static;
 
@@ -161,7 +161,7 @@ a:hover span{
 
       .form{
         max-width: 100%;
-        height: 100vh;
+        height: 120vh;
       }
 
     }
