--- a/form.css
+++ b/form.css
@@ -1,6 +1,6 @@
 body {
     align-items: center;
-    background-color: #000;
+    background-color: black;
     display: flex;
     justify-content: center;
     height: 100vh;
