--- a/login.css
+++ b/login.css
@@ -1,5 +1,6 @@
 body {  
-    background-color: black;  
+    background-color: burlywood;  
+    color: #fff;
     font-family: 'Fira Sans Extra Condensed', sans-serif; 
    }  
    .login {  
@@ -126,11 +127,11 @@ body {
 
    .center-link{
     font-size: 16px;
-    color: red;
+    color: purple;
     text-transform: capitalize;
 
    }
 
    a:hover{
-    color: purple;
+    color: black;
    }
