--- a/form.css
+++ b/form.css
@@ -119,6 +119,10 @@ body {
     text-align: center;
     width: 100%;
   }
+
+  .submit:hover{
+    color:#d3af37;
+  }
   
   .submit:active {
     background-color: #06b;
