--- a/form.css
+++ b/form.css
@@ -115,7 +115,7 @@ body {
     font-size: 18px;
     height: 50px;
     margin-top: 38px;
-    // outline: 0;
+    outline: 0;
     text-align: center;
     width: 100%;
   }
