--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ span{
 
         .reviews{
             margin: 40px;
-            color: purple;
+            color: whitesmoke;
         }
 
         .rate{
