--- a/form.css
+++ b/form.css
@@ -132,7 +132,7 @@ body {
     text-decoration: none;
   }
 a:hover span{
-    color: purple;
+    color: burlywood;
 }
   p{
     text-transform:capitalize;
@@ -141,14 +141,9 @@ a:hover span{
   }
 
   span{
-    color: #dc2f55;
+    color: green;
   }
 
-  img {
-    right: 0;
-    position: absolute;
-    max-width: 450px;
-  }
 
   
 
