web page flask framework

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static' filename='style.css")}}>
+<link rel="stylesheet" href="{{ url_for('static', filename='assets/styles.css')}}">
+<img src="{{ url_for('static', filename='assets/images/transformed.png') }}" alt="facial product">
+</body>
     <title>Facial cream landing page!</title>
 </head>
 <body>
     <style>
         menu {text-align: center;}
+        
     </style>
     <div class="menu"></div>
     <nav id="menubar">
@@ -37,9 +40,10 @@
            <a href="review.html" >
 <p class="rate"> &#9733;&#9733;&#9733;&#9733;&#9733;<span class="reviews">400+ Reviews</span></p>
 </a>
-            <div class="contact-img">
-                <img src="pexels-jana-kukebal-6496455-transformed.png">
-            </div>
+            
+                
+
+            
     </section>
     <div class="ctn">
     
